@@ -13,7 +13,7 @@ Summary: The Red Hat package management system.
 Name: rpm
 %define version @VERSION@
 Version: %{version}
-Release: 0.6
+Release: 0.7
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{version}.tar.gz
 Copyright: GPL
@@ -311,6 +311,7 @@ fi
 %changelog
 * Thu Dec 21 2000 Jeff Johnson <jbj@redhat.com>
 - immutable headers, once installed by rpm3, need to lose immutablity.
+- fix: removed headers from db need a headerCopy().
 
 * Wed Dec 20 2000 Jeff Johnson <jbj@redhat.com>
 - whiteout mozilla loop for 7.1.
